frappe/public/scss/desk/breadcrumb.scss
.breadcrumb {
	padding-left: 0;
	padding-right: 0;
	background-color: white;
}

#navbar-breadcrumbs {
	font-size: var(--text-sm);
	a {
		font-size: var(--text-md);
		margin-right: 10px;
		&:before {
			content: url('/assets/frappe/icons/timeless/icon-right-arrow.svg');
			display: inline-block;
			margin-right: 10px;
		}
	}
}

